# me_editor

./: Makefile.am  README  configure.ac
common/: common.c  log.c  midi_jack.c
include/: Makefile.am  log.h  me_editor.h  midi_jack.h
manual_parse/: Makefile.am  class_map.c  dump_tree.c  manual_parser.y  manual_scanner.l  midi_addresses.txt  midi_tree.h
me_editor/: Makefile.am  me_editor.c  me_editor.pc.in  sysex.c  sysex.h
src/: Makefile.am  sysex_explorer.c  sysex_explorer.h
